//! Configuration service implementation

use crate::proto::config::*;
use tokio_stream::wrappers::ReceiverStream;
use tonic::{Request, Response, Status};
use tracing::debug;

#[derive(Debug, Clone, Default)]
pub struct ConfigServiceImpl {}

impl ConfigServiceImpl {
    pub fn new() -> Self {
        Self {}
    }
}

#[tonic::async_trait]
impl config_service_server::ConfigService for ConfigServiceImpl {
    async fn get_config(&self, request: Request<GetConfigRequest>) -> Result<Response<GetConfigResponse>, Status> {
        debug!("GetConfig called");
        let _req = request.into_inner();
        
        let response = GetConfigResponse {
            entry: Some(ConfigEntry {
                key: "example.key".to_string(),
                value: "example value".to_string(),
                r#type: "string".to_string(),
                description: "Example configuration".to_string(),
                sensitive: false,
                created_at: Some(prost_types::Timestamp::from(std::time::SystemTime::now())),
                updated_at: Some(prost_types::Timestamp::from(std::time::SystemTime::now())),
                updated_by: "system".to_string(),
                metadata: std::collections::HashMap::new(),
            }),
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Config retrieved".to_string(),
                errors: vec![],
            }),
        };
        
        Ok(Response::new(response))
    }
    
    async fn set_config(&self, request: Request<SetConfigRequest>) -> Result<Response<SetConfigResponse>, Status> {
        debug!("SetConfig called");
        let req = request.into_inner();
        
        let response = SetConfigResponse {
            entry: Some(ConfigEntry {
                key: req.key,
                value: req.value,
                r#type: req.r#type,
                description: req.description,
                sensitive: req.sensitive,
                created_at: Some(prost_types::Timestamp::from(std::time::SystemTime::now())),
                updated_at: Some(prost_types::Timestamp::from(std::time::SystemTime::now())),
                updated_by: "user".to_string(),
                metadata: std::collections::HashMap::new(),
            }),
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Config updated".to_string(),
                errors: vec![],
            }),
        };
        
        Ok(Response::new(response))
    }
    
    async fn delete_config(&self, _request: Request<DeleteConfigRequest>) -> Result<Response<DeleteConfigResponse>, Status> {
        debug!("DeleteConfig called");
        Ok(Response::new(DeleteConfigResponse {
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Config deleted".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn list_config(&self, _request: Request<ListConfigRequest>) -> Result<Response<ListConfigResponse>, Status> {
        debug!("ListConfig called");
        Ok(Response::new(ListConfigResponse {
            entries: vec![],
            pagination: Some(crate::proto::common::PageResponse {
                total_items: 0,
                total_pages: 0,
                current_page: 1,
                page_size: 10,
            }),
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Configs retrieved".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn get_optimizer_config(&self, _request: Request<GetOptimizerConfigRequest>) -> Result<Response<GetOptimizerConfigResponse>, Status> {
        debug!("GetOptimizerConfig called");
        Ok(Response::new(GetOptimizerConfigResponse {
            config: None,
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Optimizer config retrieved".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn update_optimizer_config(&self, _request: Request<UpdateOptimizerConfigRequest>) -> Result<Response<UpdateOptimizerConfigResponse>, Status> {
        debug!("UpdateOptimizerConfig called");
        Ok(Response::new(UpdateOptimizerConfigResponse {
            config: None,
            warnings: vec![],
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Optimizer config updated".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn validate_config(&self, _request: Request<ValidateConfigRequest>) -> Result<Response<ValidateConfigResponse>, Status> {
        debug!("ValidateConfig called");
        Ok(Response::new(ValidateConfigResponse {
            valid: true,
            errors: vec![],
            warnings: vec![],
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Config validated".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn export_config(&self, _request: Request<ExportConfigRequest>) -> Result<Response<ExportConfigResponse>, Status> {
        debug!("ExportConfig called");
        Ok(Response::new(ExportConfigResponse {
            config_data: vec![],
            format: "json".to_string(),
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Config exported".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn import_config(&self, _request: Request<ImportConfigRequest>) -> Result<Response<ImportConfigResponse>, Status> {
        debug!("ImportConfig called");
        Ok(Response::new(ImportConfigResponse {
            imported_count: 0,
            updated_count: 0,
            failed_count: 0,
            errors: vec![],
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Config imported".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn get_config_version(&self, _request: Request<GetConfigVersionRequest>) -> Result<Response<GetConfigVersionResponse>, Status> {
        debug!("GetConfigVersion called");
        Ok(Response::new(GetConfigVersionResponse {
            version: None,
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Config version retrieved".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn list_config_versions(&self, _request: Request<ListConfigVersionsRequest>) -> Result<Response<ListConfigVersionsResponse>, Status> {
        debug!("ListConfigVersions called");
        Ok(Response::new(ListConfigVersionsResponse {
            versions: vec![],
            pagination: None,
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Config versions retrieved".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn revert_config_version(&self, _request: Request<RevertConfigVersionRequest>) -> Result<Response<RevertConfigVersionResponse>, Status> {
        debug!("RevertConfigVersion called");
        Ok(Response::new(RevertConfigVersionResponse {
            version: None,
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Config reverted".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    type WatchConfigStream = ReceiverStream<Result<ConfigChangeEvent, Status>>;
    
    async fn watch_config(&self, _request: Request<WatchConfigRequest>) -> Result<Response<Self::WatchConfigStream>, Status> {
        debug!("WatchConfig called");
        let (tx, rx) = tokio::sync::mpsc::channel(100);
        Ok(Response::new(ReceiverStream::new(rx)))
    }
    
    async fn batch_update_config(&self, _request: Request<tonic::Streaming<BatchConfigUpdate>>) -> Result<Response<BatchConfigResponse>, Status> {
        debug!("BatchUpdateConfig called");
        Ok(Response::new(BatchConfigResponse {
            successful: 0,
            failed: 0,
            errors: vec![],
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Batch update completed".to_string(),
                errors: vec![],
            }),
        }))
    }
}
